# vitascopic-nca

./: README.md  TODO.md  noisify_picture.ipynb  pyproject.toml
docs/: index.html  nca_app.js  nca_core.js  nca_models.js
docs/models/: sample_nca.json
notebooks/: csenge_playing.ipynb  iz_playground.ipynb  run_training.ipynb
src/vitascopic_nca/: __init__.py  base_trainer.py  config.py  decoder.py  entropy_metrics.py  mass_conservation.py  nca.py  noise.py  stimuli.py  trainer.py  utils.py
src/vitascopic_nca/generator_decoder/: decoder.py
