[project]
name = "vitascopic-nca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Iliya Zhechev", email = "iliya.zhechev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-bokeh>=4.0.5",
    "kornia>=0.8.2",
    "matplotlib>=3.10.8",
    "mediapy>=1.2.6",
    "numpy>=2.4.2",
    "panel>=1.8.7",
    "torch>=2.10.0",
]

[project.scripts]
vitascopic-nca = "vitascopic_nca:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
